--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,20 @@
   <link href="./public/global.css" rel="stylesheet">
 </head>
 <body>
+  <nav>
+    <a href="/see_all_products">
+      See All Products
+    </a>
+    <a href="/delete_product_form">
+      Delete Product
+    </a>
+    <a href="/add_product_form">
+      Add Product
+    </a>
+    <a href="/modify_product_form1">
+      Modify Product
+    </a>
+  </nav>
   
   <%= yield %>
   
