--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   <title>
     Product with Tabs Project
   </title>
-  <link href="./public/global.css" rel="stylesheet">
+  <link rel="stylesheet" href="/global.css">
 </head>
 <body>
   <nav>
@@ -25,6 +25,6 @@
   <%= yield %>
   
 </body>
-<script src="./public/global.js" style="text/javascript">
+<script src="/global.js" style="text/javascript">
 </script>
 </html>
